--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -10,8 +10,9 @@ $color1: rgb(79, 112, 156, 1);
 $color2: rgb(33, 53, 85, 1);
 $color3: rgb(205, 159, 250);
 $color4: rgb(187, 191, 202);
-$color4s: rgb(187, 191, 202, 0.7);
+$color4s: rgb(187, 191, 202, 0.9);
 $color5: white;
+$color5s: rgb(255, 255, 255,0.9);
 $color6: black;
 $color7: rgb(73, 84, 100);
 $color8: rgb(122, 96, 255);
@@ -75,9 +76,7 @@ p {
 a {
     font-weight: lighter;
     text-decoration: none;
-    animation: 1.5s ease 0s infinite pulse;
     cursor: pointer;
-    color: $color1;
 }
 
 .body {
@@ -161,7 +160,7 @@ a {
     padding-right: 0;
     min-height: $sm1;
     line-height: $sm1;
-    background: transparent;
+    background: $color5s;
     z-index: 1030;
 }
 
@@ -202,13 +201,13 @@ a {
 .logo-1 {
     height: $sm1;
 }
-
 /*---- Navbar End ----*/
+
 /*---- Banner Start ----*/
 .banner {
     background: $color4;
     background: linear-gradient(to left, $color1 35%, $color2 46%);
-    padding: $md3 0px;
+    padding: $lg1 0px;
     position: relative;
 
     .banner-content {
@@ -230,6 +229,11 @@ a {
             font-size: $xs2;
             color: $color5;
             text-shadow: 2px 2px $color6;
+            transition-duration: 4s;
+            transition-delay: 2s;
+        }
+        a:hover{
+            color: $color5;
         }
     }
 }
@@ -332,27 +336,26 @@ a {
     }
 
     .about-content h1 {
-        color: $color1;
-        text-decoration: underline;
-        text-decoration-style: dotted;
-        text-decoration-thickness: 2px;
-        text-decoration-color: $color3;
+        color: $color6;
     }
 
-    .about-content h2 a {
+    .about-content a {
         text-shadow: 2px 2px rgb(79, 112, 156, 0.7);
         transition: all 0.33s ease-out;
     }
 
-    .about-content h2 a:hover {
+    .about-content a:hover {
         transform: scale(1.1);
     }
 
     .about-text {
         width: 80%;
         margin: 0 auto;
+        transition: all 0.33s ease-out;
     }
-
+.about-text:hover{
+    transform: scale(1.1);
+}
 
 }
 
@@ -474,13 +477,6 @@ a {
     }
 }
 
-/* ------------To be Set Up Later On If Needed------------- */
-/* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {}
-
-/* Media Query for Large screens */
-@media (min-width: 1281px) {}
-
 /* ------------ GALLERY SECTION 3------------- */
 
 /* ----- BS Carrousel Media Queries ----- */
@@ -490,7 +486,7 @@ a {
 }
 
 /* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
+@media (min-width: 348px) and (max-width: 480px) {
     .d-flex {
         height: 12rem;
     }
@@ -525,6 +521,10 @@ a {
 }
 
 /* ------------ CONTACT ME SECTION 4 CSS FOR INDEX REUSED FROM THE PAGES CSS------------- */
+.contact a{
+    color: $color5;
+}
+
 /* ------------ Index End ------------- */
 
 /* ------------ PAGES CSS ------------- */
@@ -536,6 +536,10 @@ a {
     background: linear-gradient(to left, $color1 35%, $color2 46%);
     padding: $md3 0px;
     position: relative;
+
+    h2{
+        color: $color5;
+    }
 
     p{
         color: $color5;
@@ -1025,15 +1029,6 @@ input {
 
 }
 
-
-/* ------------To be Set Up Later On If Needed------------- */
-
-
-/* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px) {}
-
-/* Media Query for Large screens */
-@media (min-width: 1281px) {}
 
 /* ------------ BACKUP BUTTON ------------*/
 .up {
