adjusting banner padding

--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -207,7 +207,7 @@ a {
 .banner {
     background: $color4;
     background: linear-gradient(to left, $color1 35%, $color2 46%);
-    padding: $lg1 0px;
+    padding: 150px 0px;
     position: relative;
 
     .banner-content {
