--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -153,7 +153,6 @@ a {
 }
 
 .navbar .nav-link {
-  position: relative;
   padding: 0;
 }
 
@@ -229,7 +228,7 @@ a {
 
 /*---- Travel Tips Background End ----*/
 /* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
+@media all and (max-width: 480px) {
   .banner-content {
     padding-right: 0px;
     padding-bottom: 20px;
@@ -308,7 +307,7 @@ a {
 }
 
 /* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
+@media all and (max-width: 480px) {
   .about-section1--img {
     width: 340px;
   }
@@ -377,14 +376,26 @@ a {
 
 /* Media Query for Mobile Devices */
 /* Media Query for low resolution  Tablets, Ipads */
-@media (min-width: 280px) and (max-width: 773px) {
+@media all and (max-width: 773px) {
   #sec2-travel-vid-tip3 {
     visibility: hidden;
   }
   #sec2-travel-vid-tip2 {
     visibility: hidden;
   }
-  .sec2-travel-video {
+  #sec2-travel-text-tip3 {
+    visibility: hidden;
+  }
+  #sec2-travel-text-tip2 {
+    visibility: hidden;
+  }
+  #sec2-travel-title-tip3 {
+    visibility: hidden;
+  }
+  #sec2-travel-title-tip2 {
+    visibility: hidden;
+  }
+  #sec2-travel-title-tip2 .sec2-travel-video {
     display: grid;
     margin: 0 auto;
     grid-gap: 10px;
@@ -396,6 +407,12 @@ a {
 /* Media Query for Tablets Ipads portrait mode */
 @media (min-width: 774px) and (max-width: 938px) {
   #sec2-travel-vid-tip3 {
+    visibility: hidden;
+  }
+  #sec2-travel-title-tip3 {
+    visibility: hidden;
+  }
+  #sec2-travel-text-tip3 {
     visibility: hidden;
   }
   .sec2-travel-video {
@@ -415,7 +432,7 @@ a {
 }
 
 /* Media Query for Mobile Devices */
-@media (min-width: 348px) and (max-width: 480px) {
+@media all and (max-width: 480px) {
   .d-flex {
     height: 12rem;
   }
@@ -765,7 +782,7 @@ input {
 
 /* inician las media queries */
 /* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
+@media all and (max-width: 480px) {
   .galeria {
     /* grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(4, $lg1); */
