first pass to qa, fixing index responsive

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -395,12 +395,12 @@ a {
   #sec2-travel-title-tip2 {
     visibility: hidden;
   }
-  #sec2-travel-title-tip2 .sec2-travel-video {
+  .sec2-travel-video {
     display: grid;
     margin: 0 auto;
     grid-gap: 10px;
     grid-template-columns: 100%;
-    grid-template-areas: "vid1" "title1" "text1";
+    grid-template-areas: "vid1" "title1" "text1" "vid2" "title2" "text2" "vid3" "title3" "text3";
     height: 665px;
   }
 }
@@ -421,7 +421,7 @@ a {
     margin: 0 auto;
     grid-gap: 10px;
     grid-template-columns: 50% 50%;
-    grid-template-areas: "vid1 vid2" "title1 title2" "text1 text2";
+    grid-template-areas: "vid1 vid2" "title1 title2" "text1 text2" "vide3 ." "title3 ." "text3 .";
     height: 665px;
   }
 }
