--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -504,10 +504,7 @@ a {
         grid-template-areas:
             "vid1 vid2"
             "title1 title2"
-            "text1 text2"
-            "vide3 ."
-            "title3 ."
-            "text3 .";
+            "text1 text2";
         height: 655px;
 
     }
