--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -754,7 +754,7 @@ input {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .section-inner2 {
